--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
   </head>
 
   <body>
-    <div id="main"></div>
+    <h1>[JS Project] Spider</h1>
+    
+    <div id="canvas-wrap">
+        <canvas id="board-canvas" width="700" height="700" 
+          style="position: absolute; left: 0; top: 0; z-index: 0;">
+        </canvas>
+    </div>
+    
   </body>
 
 </html>
