--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
     <script src="./dist/main.js"></script>
-    <title>Project Name</title>
+    <link rel="shortcut icon" href="./src/assets/favicon_io/favicon.ico" type="image/x-icon">
+    <title>Spider Game</title>
   </head>
 
   <body>
     <h1>[JS Project] Spider</h1>
+    <h2>Use WASD and Space Bar to play</h2>
     
     <div id="canvas-wrap">
         <canvas id="board-canvas" width="700" height="700" 
