working version with score, game over and level check

--- a/notes.html
+++ b/notes.html
@@ -10,3 +10,9 @@ TODO's
     - player -> spider (game over) // to figure out later on the project
 3. styling of the project (weekend)
 4. ...
+
+
+<li>levels</li>
+<li>instruccions</li>
+<li>other bugs/characters</li>
+<li>multiplayer</li>
