--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
+    <link href="https://fonts.cdnfonts.com/css/sf-atarian-system" rel="stylesheet">
     <script src="./dist/main.js"></script>
     <link rel="shortcut icon" href="./src/assets/favicon_io/favicon.ico" type="image/x-icon">
     <title>Spider Game</title>
@@ -15,20 +16,30 @@
     <h1>[WIP] JS Project - Spider</h1>
     <section>
       <div id="instructions">
-        TODO
-        <ul>
-          <li>game over</li>
-          <li>levels</li>
-          <li>instruccions/score</li>
-          <li>other bugs/characters</li>
-          <li>multiplayer</li>
-        </ul>
+        INSTRUCTIONS
+        <!-- <div>PRESS F1 KEY FOR 1 PLAYER
+              F2 KEY FOR 2 PLAYERS </div> -->
+        <div>[CONTROLS WASD OR ARROWS]</div>
+        <div>PRESS SPACEBAR TO SHOOT</div>
+        <div>PRESS CTRL TO PAUSE</div>
       </div>
       
       <canvas id="board-canvas" width="700" height="700"></canvas>
 
       <div id="score">
-        SCORE
+        <!-- BOX DE HIGH SCORE EVER -->
+        <span id="playerscore"></span>
+        <br><br>
+        <div><img id="images" src="./src/assets/centipede.png" alt="centipede"> = 10 POINT</div>
+        <div>
+          <img id="images" src="./src/assets/mushroom1.png" alt="mushroom1"> or 
+          <img id="images" src="./src/assets/mushroom2.png" alt="mushroom2"> or 
+          <img id="images" src="./src/assets/mushroom3.png" alt="mushroom3"> or 
+          <img id="images" src="./src/assets/mushroom4.png" alt="mushroom4"> = 4 POINT 
+        </div>
+        <div><img id="images" src="./src/assets/alien.png" alt="alien"> = 100 POINT</div>
+        <br>
+        <div>EACH LEVEL BONUS = 100POINTS</div>
       </div>
     </section>
     
