--- a/notes.html
+++ b/notes.html
@@ -1,18 +1,19 @@
 TODO's
-0. Use only 1 canvas DONE
 1. Standarize the width and height with global variables
 2. Structure collision for each element (validate game.js) 
-    (for now is just stop or change in direction)
-    - bullet -> obstacle (destroy) DONE
-    - bullet -> spider (destroy) DONE // on monday work on becoming an obstacle DONE
-    - spider -> obstacle (change path)
-    - player -> obstacle (stop, can not continue)
     - player -> spider (game over) // to figure out later on the project
-3. styling of the project (weekend)
-4. ...
 
+space between shoots (player.js / im using set timeout is good?)
 
-<li>levels</li>
-<li>instruccions</li>
-<li>other bugs/characters</li>
-<li>multiplayer</li>
+smooth horizontal move
+bug collision (check / is overlaping one bug into other)
+start/pause/gameover layer (advanced / review approach)
+
+levels plan to user game.start() pass attributes speed/#centipedes and score until that moment
+
+EXTRAS
+other bugs
+sound
+language
+multiplayer? (socket.io)
+
