working version with pause and gameover layers

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./dist/main.css" />
+    <link href="https://fonts.cdnfonts.com/css/atari" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/sf-atarian-system" rel="stylesheet">
     <script src="./dist/main.js"></script>
     <link rel="shortcut icon" href="./src/assets/alien.png" type="image/x-icon">
@@ -32,22 +33,25 @@
         <!-- BOX DE HIGH SCORE EVER -->
         <span id="playerscore"></span>
         <br><br>
-        <div><img id="images" src="./src/assets/centipede.png" alt="centipede"> = 10 POINT</div>
+        <div><img id="images" src="./src/assets/centipede.png" alt="centipede"> = 10 POINTS</div>
         <div>
           <img id="images" src="./src/assets/mushroom1.png" alt="mushroom1"> or 
           <img id="images" src="./src/assets/mushroom2.png" alt="mushroom2"> or 
           <img id="images" src="./src/assets/mushroom3.png" alt="mushroom3"> or 
-          <img id="images" src="./src/assets/mushroom4.png" alt="mushroom4"> = 4 POINT 
+          <img id="images" src="./src/assets/mushroom4.png" alt="mushroom4"> = 4 POINTS
         </div>
-        <div><img id="images" src="./src/assets/alien.png" alt="alien"> = 100 POINT</div>
+        <div><img id="images" src="./src/assets/alien.png" alt="alien"> = 100 POINTS</div>
         <br>
-        <div>EACH LEVEL BONUS = 100POINTS</div>
+        <div>EACH LEVEL BONUS = 100 POINTS</div>
       </div>
     </section>
     
   </body>
   <footer>
     <h1>ABOUT LINKS</h1>
+    <a href=""><img src="./src/assets/github.png" alt=""></a>
+    <a href=""><img src="./src/assets/linkedin.png" alt=""></a>
+    <a href=""><img src="./src/assets/email.png" alt=""></a>
   </footer>
 
 </html>
