--- a/notes.html
+++ b/notes.html
@@ -1,12 +1,10 @@
 TODO's
-1. Standarize the width and height with global variables
 2. Structure collision for each element (validate game.js) 
-    - player -> spider (game over) // to figure out later on the project
+- player -> spider (game over) // to figure out later on the project
 
-space between shoots (player.js / im using set timeout is good?)
 
 smooth horizontal move
-bug collision (check / is overlaping one bug into other)
+bug collision (check / is overlaping one bug into other) DONE
 start/pause/gameover layer (advanced / review approach)
 
 levels plan to user game.start() pass attributes speed/#centipedes and score until that moment
@@ -17,3 +15,5 @@ sound
 language
 multiplayer? (socket.io)
 
+
+1. Standarize the width and height with global variables
