--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   </head>
 
   <body>
-    <h1>[WIP] JS Project - Spider</h1>
+    <h1>Spider Game</h1>
     <section>
       <div id="instructions">
         <div id="inst">INSTRUCTIONS</div>
         <ul>
           <li>Shoot to destroy advancing creatures for points</li>
           <li>Collisions with any creature will destroy you</li>
-          <li>Move with Arrows or WASD keys</li>
+          <li>Move with ARROWS or WASD keys</li>
           <li>Hold fire button [SPACE BAR] down for repetitive fire</li>
-          <li>Press CTRL to pause the game</li>
+          <li>Press "P" to pause the game</li>
         </ul>
       </div>
       
@@ -42,7 +42,7 @@
         </div>
         <div><img id="images" src="./src/assets/alien.png" alt="alien"> = 100 POINTS</div>
         <br>
-        <div>EACH LEVEL BONUS = 100 POINTS</div>
+        <!-- <div>EACH LEVEL BONUS = 100 POINTS</div> -->
       </div>
     </section>
     
