final version working game

--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
           <li>Shoot to destroy advancing creatures for points</li>
           <li>Collisions with any creature will destroy you</li>
           <li>Move with ARROWS or WASD keys</li>
+        </ul>
+        <img id="inst_controls" src="./src/assets/controls1.png" height="100px" alt="">
+        <ul>
           <li>Hold fire button [SPACE BAR] down for repetitive fire</li>
+        </ul>
+        <img id="inst_controls2" src="./src/assets/controls.png" height="50px" alt="">
+        <ul>
           <li>Press "P" to pause the game</li>
         </ul>
       </div>
@@ -30,28 +36,27 @@
       <canvas id="board-canvas" width="700" height="700"></canvas>
 
       <div id="score">
-        <!-- BOX DE HIGH SCORE EVER -->
         <span id="playerscore"></span>
         <br><br>
-        <div><img id="images" src="./src/assets/centipede.png" alt="centipede"> = 10 POINTS</div>
+        <div><img id="img-centipede" src="./src/assets/centipede.png" alt="centipede"> = 10 POINTS</div>
         <div>
-          <img id="images" src="./src/assets/mushroom1.png" alt="mushroom1"> or 
-          <img id="images" src="./src/assets/mushroom2.png" alt="mushroom2"> or 
-          <img id="images" src="./src/assets/mushroom3.png" alt="mushroom3"> or 
-          <img id="images" src="./src/assets/mushroom4.png" alt="mushroom4"> = 4 POINTS
+          <img id="images1" src="./src/assets/mushroom1.png" alt="mushroom1"> or 
+          <img id="images2" src="./src/assets/mushroom2.png" alt="mushroom2"> or 
+          <img id="images3" src="./src/assets/mushroom3.png" alt="mushroom3"> or 
+          <img id="images4" src="./src/assets/mushroom4.png" alt="mushroom4"> = 4 POINTS
         </div>
-        <div><img id="images" src="./src/assets/alien.png" alt="alien"> = 100 POINTS</div>
+        <div><img id="images5" src="./src/assets/alien.png" alt="alien"> = 100 POINTS</div>
         <br>
-        <!-- <div>EACH LEVEL BONUS = 100 POINTS</div> -->
+        <div>EACH LEVEL BONUS = 100 POINTS</div>
       </div>
     </section>
     
   </body>
   <footer>
     <h1>ABOUT LINKS</h1>
-    <a href=""><img src="./src/assets/github.png" alt=""></a>
-    <a href=""><img src="./src/assets/linkedin.png" alt=""></a>
-    <a href=""><img src="./src/assets/email.png" alt=""></a>
+    <a href="https://github.com/jeffreyferrert" target="_blank"><img src="./src/assets/github.png" alt=""></a>
+    <a href="#" target="_blank"><img src="./src/assets/linkedin.png" alt=""></a>
+    <a href="#" target="_blank"><img src="./src/assets/email.png" alt=""></a>
   </footer>
 
 </html>
