--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
   <footer>
     <h1>ABOUT LINKS</h1>
     <a href="https://github.com/jeffreyferrert" target="_blank"><img src="./src/assets/github.png" alt=""></a>
-    <a href="#" target="_blank"><img src="./src/assets/linkedin.png" alt=""></a>
-    <a href="#" target="_blank"><img src="./src/assets/email.png" alt=""></a>
+    <a href="https://www.linkedin.com/in/jferrertorres/" target="_blank"><img src="./src/assets/linkedin.png" alt=""></a>
   </footer>
 
 </html>
